# sorohunter

./: .gitignore  AGENT.md  AUTH_BYPASS.md  INGRESS_ATTACK.md  KILLCHAIN.md  LICENSE  README.md  REAL_WORLD.md  SOROBAN_ATTACK.md  SOROBAN_LANGUAGE_STUDY.md  SPEC.md
bench/: Cargo.toml  ground_truth.json  ground_truth_checkauth.json
bench/attacker_pwn/: Cargo.toml
bench/attacker_pwn/src/: lib.rs
bench/auth_pull/: Cargo.toml
bench/auth_pull/src/: lib.rs
bench/blind_account/: Cargo.toml
bench/blind_account/src/: lib.rs
bench/bound_account/: Cargo.toml
bench/bound_account/src/: lib.rs
bench/bound_passkey/: Cargo.toml
bench/bound_passkey/src/: lib.rs
bench/chain_vault/: Cargo.toml
bench/chain_vault/src/: lib.rs
bench/econ_safe/: Cargo.toml
bench/econ_safe/src/: lib.rs
bench/econ_vuln/: Cargo.toml
bench/econ_vuln/src/: lib.rs
bench/fee_token/: Cargo.toml
bench/fee_token/src/: lib.rs
bench/fee_vault_safe/: Cargo.toml
bench/fee_vault_safe/src/: lib.rs
bench/fee_vault_vuln/: Cargo.toml
bench/fee_vault_vuln/src/: lib.rs
bench/good_account/: Cargo.toml
bench/good_account/src/: lib.rs
bench/liar_oracle/: Cargo.toml
bench/liar_oracle/src/: lib.rs
bench/liar_token/: Cargo.toml
bench/liar_token/src/: lib.rs
bench/safe_chain_vault/: Cargo.toml
bench/safe_chain_vault/src/: lib.rs
bench/safe_upgrade_vault/: Cargo.toml
bench/safe_upgrade_vault/src/: lib.rs
bench/safe_vault/: Cargo.toml
bench/safe_vault/src/: lib.rs
bench/scoped_safe/: Cargo.toml
bench/scoped_safe/src/: lib.rs
bench/scoped_vuln/: Cargo.toml
bench/scoped_vuln/src/: lib.rs
bench/seq_safe/: Cargo.toml
bench/seq_safe/src/: lib.rs
bench/seq_vuln/: Cargo.toml
bench/seq_vuln/src/: lib.rs
bench/unauth_pull/: Cargo.toml
bench/unauth_pull/src/: lib.rs
bench/unbound_account/: Cargo.toml
bench/unbound_account/src/: lib.rs
bench/unbound_passkey/: Cargo.toml
bench/unbound_passkey/src/: lib.rs
bench/upgrade_vault/: Cargo.toml
bench/upgrade_vault/src/: lib.rs
bench/void_guard_account/: Cargo.toml
bench/void_guard_account/src/: lib.rs
bench/vuln_vault/: Cargo.toml
bench/vuln_vault/src/: lib.rs
harness/: Cargo.toml
harness/src/: main.rs
oracles/: README.md  field_oracle.rs.ref  order_oracle.rs.ref  run_oracles.sh  tempest_soroban_env_c212b91.patch
oracles/detectors/: x1_disassembler.py  x1_scan.py
recall/admin_capture/: Cargo.toml
recall/drain_pool/: Cargo.toml
recall/fakedep_vault/: Cargo.toml
recall/greed_vault/: Cargo.toml
recall/oracle_vault/: Cargo.toml
recall/redirect_vault/: Cargo.toml
recall/replay_vault/: Cargo.toml
recon/: checkauth_census.py  harvest_events.py  hubble_contracts.py  hunt_acquire.py  hunt_confirmed.py  hunt_rpc.py  hunt_sweep.py  hunter.py  probe_endpoints.py  probe_pagination.py  seed_corpus.py
reports/: al_auth.json  al_unauth.json  bench_20260709.json  bench_20260709.md  bench_20260710.json  bench_20260710.md  bp_bound.json  bp_unbound.json  ca_blind.json  ca_good.json  ca_void.json  ecd990_bytes_n_32.json  ecd990_realauth.json
soro/: Cargo.toml
soro/assets/: attacker_pwn.wasm  auth_pull.wasm  blind_account.wasm  bound_account.wasm  bound_passkey.wasm  econ_safe.wasm  econ_vuln.wasm  fee_token.wasm  fee_vault_safe.wasm  fee_vault_vuln.wasm  good_account.wasm  liar_oracle.wasm  liar_token.wasm  scoped_safe.wasm  scoped_vuln.wasm  seq_safe.wasm  seq_vuln.wasm  unauth_pull.wasm  unbound_account.wasm  unbound_passkey.wasm  void_guard_account.wasm
soro/src/: abi.rs  cve.rs  econ.rs  engine.rs  fork.rs  main.rs  report.rs  rpc.rs
sorohunter/: abi.py  cli.py  report.py
tests/: test_abi.py  test_allowance.py  test_checkauth.py  test_econ.py  test_feetoken.py  test_fuzz.py  test_realauth.py  test_replay.py  test_report.py  test_scope.py
(+10 files in other folders)
