[workspace]
resolver = "2"
members = ["liar_token", "liar_oracle", "vuln_vault", "safe_vault", "chain_vault", "safe_chain_vault", "upgrade_vault", "safe_upgrade_vault", "attacker_pwn"]

[workspace.dependencies]
soroban-sdk = "25.0.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
