[package]
name = "harness"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
soroban-sdk = { version = "25.0.1", features = ["testutils"] }
ed25519-dalek = "2"
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
base64 = "0.22"

[profile.release]
opt-level = 2
