[package]
name = "soro"
version = "0.1.0"
edition = "2021"
description = "sorohunter — single-binary Rust consolidation (WIP; replaces the Python orchestration)"

[[bin]]
name = "sorohunter"
path = "src/main.rs"

[dependencies]
serde_json = "1"
# testutils is used at RUNTIME here (the fork-sim engine runs contracts in a
# local Env), not just in tests — same as ../harness.
soroban-sdk = { version = "25", features = ["testutils"] }
