[package]
name = "soro"
version = "0.1.0"
edition = "2021"
description = "sorohunter — single-binary Rust consolidation (WIP; replaces the Python orchestration)"

[[bin]]
name = "sorohunter"
path = "src/main.rs"

[dependencies]
serde_json = "1"
# testutils is used at RUNTIME here (the fork-sim engine runs contracts in a
# local Env), not just in tests — same as ../harness.
soroban-sdk = { version = "25", features = ["testutils"] }
# native spec-from-wasm: read the contract ABI directly from the WASM custom
# section, no `stellar contract info interface` shell-out.
soroban-spec = "25"
# native RPC fetch: getLedgerEntries over JSON-RPC, no `stellar contract fetch`.
ureq = { version = "2", features = ["json"] }
stellar-strkey = "0.0.13"
